# Mochi-Moo

./: .env.example  Architecture.md  CAPABILITIES.md  CLI.py  FAQ.md  MAKEFILE  README.md  additional_files.py  ai_brain.py  conjuration_files.txt  contributing.md  core.py  disclaimer.md  integration.py  mochi-ai-brain-v2.py  pyproject.toml  roadmap.md  server.py  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile  docker-compose.yml
docs/: index.html
test/: metrics_report.md  performance_validation_suite.py  test_core.py  test_integration.py  test_performance_benchmarks.py  test_propert_visual.py  test_synthesis_algorithms.py  test_websocket.py
tests/: __init__.py  init.py
