# ===== setup.cfg =====
[metadata]
name = mochi-moo
version = 1.0.0
author = Cazandra Aporbo MS
author_email = becaziam@gmail.com
description = A superintelligent assistant who dreams in matte rainbow
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Cazzy-Aporbo/Mochi-Moo
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires =
    fastapi>=0.100.0
    uvicorn[standard]>=0.23.0
    numpy>=1.24.0

[options.packages.find]
where = .
include = mochi_moo*
exclude = tests*

[options.entry_points]
console_scripts =
    mochi = mochi_moo.cli:main
    mochi-server = mochi_moo.server:run_server

[flake8]
max-line-length = 100
extend-ignore = E203, E266, E501, W503
max-complexity = 10
exclude = 
    .git,
    __pycache__,
    venv,
    .venv,
    .pytest_cache,
    build,
    dist
per-file-ignores =
    __init__.py:F401

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = -v --tb=short --strict-markers
